# Highboy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.pt.md  README.us.md  log.txt  sdkconfig  sdkconfig.old
components/Applications/: CMakeLists.txt
components/Applications/GPIO/: GPIO.c
components/Applications/GPIO/include/: GPIO.h
components/Applications/UART/: CMakeLists.txt  UART.c
components/Applications/UART/include/: UART.h
components/Applications/bad_usb/: bad_usb.c  bad_usb_menu.c
components/Applications/bad_usb/include/: bad_usb.h  bad_usb_menu.h
components/Applications/battery_ui/: CMakeLists.txt  battery_ui.c
components/Applications/battery_ui/include/: battery_ui.h
components/Applications/bluetooth/: apple_spam.c  bluetooth_menu.c  bluetooth_scanner.c  rssi_analyser.c
components/Applications/bluetooth/include/: apple_spam.h  bluetooth_menu.h  bluetooth_scanner.h  rssi_analyser.h
components/Applications/brightness_ui/: CMakeLists.txt  brightness_ui.c
components/Applications/brightness_ui/include/: brightness_ui.h
components/Applications/buzzer_ui/: CMakeLists.txt  buzzer_ui.c
components/Applications/buzzer_ui/include/: buzzer_ui.h
components/Applications/home/: home.c
components/Applications/home/include/: home.h
components/Applications/info_device/: CMakeLists.txt  info_device.c
components/Applications/info_device/include/: info_device.h
components/Applications/infrared/: infrared.c
components/Applications/infrared/include/: infrared.h
components/Applications/ir_menu/: CMakeLists.txt  ir_menu.c
components/Applications/ir_menu/include/: ir_menu.h
components/Applications/keyboard_ui/: CMakeLists.txt  keyboard_ui.c
components/Applications/keyboard_ui/include/: keyboard_ui.h
components/Applications/led_ui/: CMakeLists.txt  led_ui.c
components/Applications/led_ui/include/: led_ui.h
components/Applications/menu/: CMakeLists.txt  menu.c
components/Applications/menu/include/: menu.h
components/Applications/menu_battery/: CMakeLists.txt  menu_battery.c
components/Applications/menu_battery/include/: menu_battery.h
components/Applications/menu_generic/: CMakeLists.txt  menu_generic.c
components/Applications/menu_generic/include/: menu_generic.h
components/Applications/music_menu/: CMakeLists.txt  music_menu.c
components/Applications/music_menu/include/: music_menu.h
components/Applications/play/: CMakeLists.txt
components/Applications/sd_browser/: CMakeLists.txt  sd_browser.c
components/Applications/sd_browser/include/: sd_browser.h
components/Applications/sub_menu/: CMakeLists.txt  sub_menu.c
components/Applications/sub_menu/include/: sub_menu.h
components/Applications/ui_sd/: CMakeLists.txt  ui_sd.c
components/Applications/ui_sd/include/: ui_sd.h
components/Applications/wifi/: evil_twin.c  port_scan.c  traffic_analyzer.c  wifi.c  wifi_analyzer.c  wifi_deauther.c
components/Applications/wifi/include/: evil_twin.h  port_scan.h  traffic_analyzer.h  wifi.h  wifi_analyzer.h  wifi_deauther.h
components/Core/: CMakeLists.txt  kernel.c  ram_monitor.c
components/Core/hb_hal_button/: hb_hal_button.c
components/Core/hb_hal_gpio/: hb_hal_gpio.c
components/Core/hb_hal_i2c/: hb_hal_i2c.c
components/Core/hb_hal_i2c/include/: hb_hal_i2c.h
components/Core/include/: kernel.h  ram_monitor.h
components/Drivers/: CMakeLists.txt
components/Drivers/backlight/: CMakeLists.txt  backlight.c
components/Drivers/backlight/include/: backlight.h
components/Drivers/bq25896/: bq25896.c
components/Drivers/bq25896/include/: bq25896.h
components/Drivers/buzzer/: buzzer.c
components/Drivers/buzzer/include/: buzzer.h
components/Drivers/cc1101/: cc1101.c
components/Drivers/cc1101/include/: cc1101.h
components/Drivers/display/: display.c
components/Drivers/display/include/: display.h
components/Drivers/i2c_init/: CMakeLists.txt  i2c_init.c
components/Drivers/i2c_init/include/: i2c_init.h
components/Drivers/led/: CMakeLists.txt  led_control.c
components/Drivers/led/include/: led_control.h
components/Drivers/pins/include/: pin_def.h
components/Drivers/pn7150/: pn7150.c
components/Drivers/pn7150/include/: pn7150.h
components/Drivers/spi/: spi.c
components/Drivers/spi/include/: spi.h
components/Drivers/spi_init/: spi_init.c
components/Drivers/spi_init/include/: spi_init.h
components/Drivers/st7789/: st7789.c
components/Drivers/st7789/include/: st7789.h
components/Drivers/tusb_desc/: tusb_desc.c
components/Drivers/tusb_desc/include/: tusb_desc.h
components/Service/: CMakeLists.txt
components/Service/bluetooth/: bluetooth_service.c
components/Service/bluetooth/include/: bluetooth_service.h
components/Service/dns_server/: dns_server.c
components/Service/dns_server/include/: dns_server.h
components/Service/font/: font.c
components/Service/hb_sd/: hb_sd.c
components/Service/hb_sd/include/: hb_sd.h
components/Service/http_server/: http_server_service.c
components/Service/http_server/include/: http_server_service.h
components/Service/icons/: icons.c
components/Service/icons/include/: icons.h
components/Service/ir/: CMakeLists.txt  ir_burst.c  ir_common.c  ir_encoder.c  ir_rc5.c  ir_rc6.c  ir_rx.c  ir_samsung_tv.c  ir_sony.c  ir_storage.c  ir_tx.c  protocol_nec.c  protocol_rc5.c  protocol_rc6.c  protocol_samsung32.c  protocol_sony.c  sd_manager.c
components/Service/ir_transmiter/: ir_transmiter.c
components/Service/ir_transmitter/: CMakeLists.txt  ir_transmitter.c
components/Service/sd_card/: CMakeLists.txt  sd_card.c  sd_card_dir.c  sd_card_file.c  sd_card_info.c  sd_card_init.c  sd_card_read.c  sd_card_write.c
components/Service/sd_manager/: CMakeLists.txt  sd_manager.c
components/Service/storage_api/: CMakeLists.txt  storage_api.c  storage_impl.c  storage_init.c  storage_write.c
components/Service/storage_assets/: storage_assets.c
components/Service/storage_thread/: CMakeLists.txt  storage_thread.c
components/Service/storage_vfs/: vfs_core.c  vfs_littlefs.c  vfs_sdcard.c
components/Service/wifi/: wifi_service.c
(+50 files in other folders)
