        idf_component_register(SRCS "font/font.c"
                                "icons/icons.c"
                                "hb_sd/hb_sd.c"
                                "wifi/wifi_service.c"
                                "http_server/http_server_service.c"
                                "storage_api/storage_api.c"
                                "storage_thread/storage_thread.c"
                                "virtual_display_client/virtual_display_client.c"
                                "usb_stream/usb_stream.c"
                                "dns_server/dns_server.c"
                                "bluetooth/bluetooth_service.c"
                                "ir/ir_encoder.c"
                                "ir/ir_common.c"
                                "ir/ir_tx.c"
                                "ir/ir_rx.c"
                                "ir/ir_storage.c"
                                "sd_manager/sd_manager.c"
                                "ir/protocol_nec.c"
                                "ir/protocol_rc6.c"
                                "ir/protocol_rc5.c"
                                "ir/protocol_samsung32.c"
                                "ir/protocol_sony.c"
                                "ir/ir_burst.c"
                    INCLUDE_DIRS "font/include"
                                 "hb_sd/include"
                                 "icons/include"
                                 "wifi/include"
                                 "http_server/include"
                                 "dns_server/include"
                                 "virtual_display_client/include"
                                 "usb_stream/include"
                                 "storage_api/include"
                                 "storage_thread/include"
                                 "storage_message/include"
                                 "bluetooth/include"
                                 "ir/include"
                                 "sd_manager/include"
                    REQUIRES sdmmc
                    driver  
                    vfs
                    fatfs
                    esp_timer
                    esp_wifi
                    esp_common
                    esp_netif
                    Drivers 
                    esp_http_server
                    nvs_flash
                    bt 
                    )
