idf_component_register(SRCS "ir_menu.c"
                    INCLUDE_DIRS "include"
                    REQUIRES 
                    driver
                    Drivers
                    Applications
                    Services
                    hb_sd
                    icons
                    sub_menu
                    music_menu
                    menu)
    
