idf_component_register(SRCS "menu_generic.c"
                    INCLUDE_DIRS "include"
                    REQUIRES 
                    driver
                   Drivers
                    Applications
                    hb_sd
                    icons
                    sub_menu
                    music_menu
                    menu)
