idf_component_register(SRCS "music_menu.c"
                    INCLUDE_DIRS "include"
                    REQUIRES 
                    driver
                   Drivers
                    Applications
                    hb_sd
                    icons
                    sub_menu
                    menu)